syntax = "proto3";

package content;

import "google/protobuf/empty.proto";

option go_package = "proto/";

service ContentService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);

    rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty);

    rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty);

    rpc GetPost(GetPostRequest) returns (Post);

    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message CreatePostRequest {
    string author = 1;
    string content = 2;
}

message CreatePostResponse {
    uint64 id = 1;
}

message UpdatePostRequest {
    uint64 id = 1;
    string author = 2;
    string content = 3;
}

message DeletePostRequest {
    uint64 id = 1;
    string author = 2;
}

message GetPostRequest {
    uint64 id = 1;
    string author = 2;
}

message GetPostResponse {
    uint64 id = 1;
    string title = 2;
    string content = 3;
}

message ListPostsRequest {
    int32 offset = 1;
    int32 max_cnt = 2;
    string author = 3;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int32 last_offset = 2;
}

message Post {
    uint64 id = 1;
    string author = 2;
    string content = 3;
}
